# storage/api-docs/api-docs.json
@@ -1583,6 +1583,54 @@
                     }
                 }
             }
+        },
+        "/order-search": {
+            "post": {
+                "tags": [
+                    "Order Details"
+                ],
+                "summary": "For Order Search ",
+                "operationId": "dab10fb308161b2d84bc740d9de7687a",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "order_id": {
+                                        "type": "string",
+                                        "example": "ORD-66c46b7083b2b-jq0Z2"
+                                    },
+                                    "email": {
+                                        "type": "string",
+                                        "example": "deepak@thetemz.com"
+                                    },
+                                    "phone": {
+                                        "type": "string",
+                                        "example": "0987654321"
+                                    },
+                                    "user_token": {
+                                        "type": "string",
+                                        "example": "FOREVER-MEDSPA"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Result Found"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
         }
     },
     "components": {
